Mobile - Spacing Issues

--- a/css/style.css
+++ b/css/style.css
@@ -395,12 +395,13 @@ h3 {
     }
 
 @media(max-width:700px){
+    .testimonial-col {
+        padding: 5px;       
+    }
+
     .testimonial-col img{
         margin-left: 0px;
         margin-right: 15px;
-    }
-    .testimonial-col p{
-        margin: 0px;
     }
 }
 
